--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,12 @@
 {
-  "extends": "eslint-config-airbnb",
+  "extends": "airbnb/legacy",
   "env": {
     "mocha": true,
-    "node": true
+    "node": true,
+    "es6": true
+  },
+  "ecmaFeatures": {
+    "modules": true
   },
   "globals": {
     "expect": true
@@ -12,6 +16,8 @@
     "no-use-before-define": [2, "nofunc"],
     "no-unused-expressions": 0,
     "no-reserved-keys": 0,
-    "space-infix-ops": 0
+    "space-infix-ops": 0,
+    "comma-dangle": 0,
+    "no-param-reassign": 0
   }
 }
