--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "babel-core": "^5.6.15",
     "babel-eslint": "^3.1.20",
     "chai": "^3.0.0",
-    "eslint": "^0.24.0",
-    "eslint-config-airbnb": "0.0.6",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^4.0.0",
     "lodash.isplainobject": "^3.2.0",
     "mocha": "^2.2.5"
   },
